<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.steve.hdc</groupId>
    <artifactId>Hadoop-Distributed-Chat</artifactId>
    <packaging>jar</packaging>
    <version>1.0</version>
    <name>Hadoop-Distributed-Chat</name>
    <url>http://maven.apache.org</url>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>


    <dependencies>
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>1.1.1</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.json/json -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20190722</version>
        </dependency>

        <dependency>
            <groupId>com.github.Simonwep</groupId>
            <artifactId>java-express</artifactId>
            <version>0.1.1</version>
        </dependency>

        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-common</artifactId>
            <version>3.2.1</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                      <archive>
                        <manifest>
                            <mainClass>com.steve.hdc.Server</mainClass>
                        </manifest>
                      </archive>
                </configuration>
            </plugin>


            <plugin>
            	<groupId>org.apache.maven.plugins</groupId>
            	<artifactId>maven-dependency-plugin</artifactId>
            	<version>2.5.1</version>
            	<executions>
            	  <execution>
            		<id>copy-dependencies</id>
            		<phase>package</phase>
            		<goals>
            		    <goal>copy-dependencies</goal>
            		</goals>
            		<configuration>
            		    <outputDirectory>
                            ${project.build.directory}/dependency-jars/
                        </outputDirectory>
            		</configuration>
            	    </execution>
        	     </executions>
             </plugin>


             <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-shade-plugin</artifactId>
               <version>2.4.3</version>
               <executions>
                   <execution>
                       <phase>package</phase>
                       <goals>
                           <goal>shade</goal>
                       </goals>
                       <configuration>
                           <artifactSet>
                               <includes>
                                   <include>org.json:json</include>
                                   <include>com.github.Simonwep:java-express</include>
                                   <include>org.apache.hadoop:hadoop-common</include>
                               </includes>
                           </artifactSet>
                       </configuration>
                   </execution>
               </executions>
           </plugin>


        </plugins>
    </build>


</project>
